일단 올리기

--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -58,13 +58,13 @@ excerpt: MEVN교과서 (1)
 - Mongoose와 MongoDB node.js 드라이버 성능비교
 - MongoDB node.js 드라이버를 이용한 CRUD
 - aggregate와 mapReduce 성능비교
-- aggregate 예제, mapReduce 예제
+- aggregate와 mapReduce 예제와 성능비교 
 
 ## 3. 코드최적화와 패러다임
 ### 3.1 함수형프로그래밍
 - 함수형프로그래밍의 특징 
-- 함수형프로그래밍 응용예제
- 
+- 함수형프로그래밍 응용예제 
+
 ### 3.2 자바스크립트 최적화  
 - 함수선택, parsInt와 ~~의 성능비교
 - 함수선택, deepCopy 성능비교
