--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -516,7 +516,7 @@ db.orders.mapReduce(
 
 앞서서 aggregate와 mapReduce의 예제들을 조금씩 살펴보았습니다. 그렇다면 좀 더 자세히 살펴보도록 하겠습니다. 
 
-## 2.4.7 aggregate와 mapReduce 예제 
+## 2.4.7 aggregate와 mapReduce 예제와 성능비교
 
 
 
