--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -18,7 +18,7 @@ excerpt: MEVN교과서 (1)
 
 저는 비전공자 출신으로 2014년에 처음 공주대학교 커뮤니티를 독학으로 만들고 개발자가 되면서 기본내용은 간단히 설명하고 경험 중심의 코드를 통해 좀 더 쓸모있는 책을 만들고 싶었습니다. 이 책을 통해 비전공자들도 거뜬히 커뮤니티 한 개 정도는 만들 수 있는 세상이 오길 바랍니다.
 
-아울러 모든 코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다.
+아울러 모든 코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내셔서 해답을 찾길 바랍니다. 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 말 부탁드립니다. 
 
 # 독자대상
 이 책을 보려면 다음 기술에 대한 기본 지식이 있어야 합니다. 
@@ -55,10 +55,9 @@ excerpt: MEVN교과서 (1)
 - MongoDB의 구조
 - MongoDB의 특징
 - MongoDB의 한계
-- Mongoose와 MongoDB node.js 드라이버 성능비교
-- MongoDB node.js 드라이버를 이용한 CRUD
-- aggregate와 mapReduce 성능비교
-- aggregate와 mapReduce 예제와 성능비교 
+- Mongoose와 MongoDB node.js 드라이버
+- MongoDB mongoose를 이용한 CRUD
+- aggregate와 mapReduce 성능비교 
 
 ## 3. 코드최적화와 패러다임
 ### 3.1 함수형프로그래밍
