--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -421,12 +421,230 @@ MongoDB의 특징은 정말 많지만 크게 10가지만 뽑아 보았습니다.
 4. index의 **사이즈는 1024byte보다 작아야** 합니다. 
  
 ## 2.4.4 Mongoose와 MongoDB node.js 드라이버 성능비교
-node.js를 이용해 mongoDB를 쓰려면 라이브러리가 필요합니다. 대표적으로 mongoose와 mongoDB node.js 드라이버가 있습니다. 드라이버가 더 빠르고 쓰기에는 mongoose가 더 쉽습니다. 또한 드라이버의 경우 3.x는 커넥션 부분의 버그가 있다고 알려져있어서 production모드에서 2.x를 많이 쓴다고 알려져있습니다. mongoose를 쓰는 기업들도 많지만 성능에 민감하다면 mongoDB node.js 드라이버를 써야 합니다. 
+node.js를 이용해 mongoDB를 쓰려면 라이브러리가 필요합니다. 대표적으로 mongoose와 mongoDB node.js 드라이버가 있습니다. 드라이버가 더 빠르고 쓰기에는 mongoose가 더 쉽습니다. 또한 드라이버의 경우 3.x는 커넥션 부분의 버그가 있다고 알려져있어서 production모드에서 2.x를 많이 쓴다고 알려져있습니다. mongoose를 쓰는 기업들도 많지만 성능에 민감하다면 mongoDB node.js 드라이버를 써야 하는 것이죠. 자세한 사항은 [Mongoose와MongoDB벤치마크](https://medium.com/@bugwheels94/performance-difference-in-mongoose-vs-mongodb-60be831c69ad)를 참고하시길 바랍니다. 
 
-그렇다면 어느정도 성능차이가 나는 것일까요? 한번 해보겠습니다. 
+mongoose가 mongoDB보다 느리긴 해도 그렇게 느린 것은 아닙니다. 
+ 
+### 2장/mongodb/simple_mongoose.js
+```js
+const mongoose = require('mongoose');
+const Photo = require('./models/photo.js');
+const fs = require('fs')
+const path = require('path')
+//Set up default mongoose connection
+const mongoDB = 'mongodb://127.0.0.1/my_database';
+mongoose.connect(mongoDB, { useNewUrlParser: true })
+.then(() =>  console.log('connection succesful'))
+.catch((err) => console.error(err));
+const _path = path.join(__dirname, './data/photos.json')
+const main = async()=>{
+    const t = JSON.parse(fs.readFileSync(_path).toString()); 
+    console.time('5000건의 데이타 삽입')
+    Photo.insertMany(t, function(error, docs) {
+        console.timeEnd('5000건의 데이타 삽입')
+    });
+}  
+main();
+```
+5000건의 데이타 삽입하는 예제를 만들어 보았습니다. 예제를 실행하면 약 1초정도의 시간이 걸립니다. 그렇게 느린 것은 아닙니다. 자신이 진행하는 프로젝트에 있어 들어오는 나가는 데이타의 양을 예상 및 확인하고 성능을 고려하여 정하면 좋습니다. 
+
+예제 데이타는 [JSONPlaceholder](https://jsonplaceholder.typicode.com/)사이트를 이용했습니다. 이 사이트를 이용하면 예제 데이타를 쉽게 만들어 낼 수 있습니다.
+
+## 2.4.5 MongoDB Mongoose를 이용한 CRUD
+mongoDB는 스키마를 정하지 않아도 데이타가 마구잡이로 들어가는 것이 장점입니다. 실제로 네이버에서 많은 서비스들을 통합적으로 관리하는 로그DB를 생성할 때 스키마가 모두 다르기 때문에 그 이유로 mongoDB를 통해 데이터를 쌓았다고 합니다. 많은 서비스를 통합적으로 관리하는 것에서는 스키마레스, 스키마가 없는 것이 좋지만 보통 DB를 만들 때 스키마를 정합니다. 정하지 않는다면 추후 관리가 어려운 측면이 있기 때문입니다.
+
+### 2장/mongodb/models/simple_mongoose.js
+```js
+const mongoose = require('mongoose');
+const Schema = mongoose.Schema;
+
+const PhotoSchema = new Schema({
+	albumId: Number,
+	id: Number,
+  title: String, 
+  url : String, 
+  thumbnailUrl : String
+});
+
+module.exports = mongoose.model('Photo', PhotoSchema); 
+```
+photo라는 document의 스키마를 구축 했습니다.
+
+이제 이 스키마를 통해 모델을 만들고 그 모델을 통해 데이타를 삽입, Create, 조회, Read, 수정, Update, 삭제, Delete를 해보겠습니다.
+
+## 1. Create
+### 2장/mongodbs/simple_save.js
+```js
+...
+
+const main = async()=>{ 
+    const _data = {
+        "albumId": 12010,
+        "id": 12010,
+        "title": "큰돌",
+        "url": "https://via.placeholder.com/600/13454b",
+        "thumbnailUrl": "https://via.placeholder.com/150/13454b"
+    } 
+    const new_photo = new Photo(_data) 
+    const t = await new_photo.save();
+    console.log(t)
+}  
+main();
+```
+전에 테스트를 할 때 insertmany와는 달리 save의 경우 하나의 document만 insert가 가능하고 class를 통해 객체를 만들 듯 Photo라는 클래스에 _data라는 초기값을 받아 만든 new_photo를 통해 데이타를 삽입시킬 수 있습니다. 
+
+## 2. Read
+### 2장/mongodbs/simple_read.js
+```js
+...
+
+const main = async()=>{  
+  const t = await Photo.findOne({
+      "title" : {
+        $eq : '큰돌'
+      }, 
+      "url" : {
+        $eq : 'jhc9639@naver.com'
+      }
+    }).lean();
+  console.log(t)
+}  
+main();
+```
+이렇게 findOne을 통해 쉽게 title이 큰돌, url이 jhc9639@naver.com 인 것을 찾아 낼 수 있습니다. 하나만 찾을 때 findOne을 사용하며 여러개를 찾고 싶을 때는 find를 사용합니다. 
+
+ > lean : 무려 성능차이에서 4배를 일으키는 이 lean은 순수 자바스크립트 객체를 리턴하는데 쓰입니다. 안그러면 Mongoose의 getters/setters 그리고 다른 것들도 담긴 Mongoose Documents를 리턴하기 때문에 find로 docs를 받을 때 JSON.parse를 무조건 해줘야 합니다. 하지만 이 소주를 추가한다면 그럴 필요가 없게 됩니다.
 
 
-## 2.4.5 MongoDB node.js 드라이버를 이용한 CRUD
+## 3. Update
+어찌보면 가장 많이 쓰이는 구절입니다. 솔직히 이 Update만 있으면 만능입니다. 예를 들어 이 데이타가 있는지 없는지를 파악한 후 없으면 삽입, 있으면 이 데이터로 수정하게 하는 로직도 구현할 수 있으며 응용이 무궁무진 합니다. 어떠한 key값을 가진 항목이나 항목들을 update 시킵니다. 
+
+update의 구조는 다음과 같습니다. 
+```js
+update({where},{set},{option}) 
+```
+where, 어떤 한 값을 찾아서, set, 뭘 어떻게, option, 어떤 옵션하에 변화시킬지를 정해서 document를 변화시킬 수 있습니다. 
+이 때 where과 set은 필수이며 option은 선택입니다.
+
+먼저 옵션입니다. 
+1. upsert,  앞의 쿼리를 통해 찾는 값이 없다면 값을 insert합니다. 
+2. multi,  update를 할 때 한가지만이 아닌 그 전부를 업데이트합니다. 앞의 설정을 안하면 그 key에 맞는 값 한가지만 업데이트 됩니다. 
+3. new, 쿼리수행후 갱신된 값을 반환합니다. 새로운 값으로 저장한 뒤 확인할 때 쓰입니다. 
+4. setDefaultsOnInsert, 쿼리를 날릴 때 default값을 insert하게 해줍니다. 
+```js
+{
+  upsert: true  
+  multi : true  
+  new : true 
+  setDefaultsOnInsert: true 
+}
+```
+이렇게 json형태로 true, 또는 false의 값을 가진채로 쓰이게 됩니다.  
+
+### 2장/mongodbs/simple_update.js
+​
+```js
+...
+const main = async()=>{  
+    const t = await Photo.updateMany({
+        "title" : {
+          $eq : '큰돌'
+        }
+      }, {
+        $set : {
+          "url" : 'jhc9639@naver.com'
+        }
+      }, {
+        upsert: true, 
+        multi: true, 
+        new : true
+      }).lean();
+    console.log(t)
+}  
+main();
+
+```
+큰돌이라는 title을 가진 document의 url을 변경시켰습니다. 옵션을 주어 그 값이 없다면 insert, 해당되는 값이 많다면 전부 반영, 리턴되는 값은 업데이트된 값으로 설정했습니다.  
+ 
+```js
+...
+const main2 = async()=>{  
+  const t = await Photo.updateMany({
+      "title" : {
+        $in : ['큰돌', '홍철', '현영','승철']
+      }
+    }, {
+      $set : {
+        "url" : 'jhc9639@naver.com'
+      }
+    }, {
+      upsert: true, 
+      multi: true, 
+      new : true
+    }).lean();
+  console.log(t)
+}  
+main2();
+```
+$in을 사용하면 그 중 하나 값이 포함되어있다면~을 구현할 수 있습니다. 여러개의 이름이라는 값을 가졌다면 그 값을 update시킵니다.  
+```js
+const main2 = async()=>{  
+  const t = await Photo.updateMany({
+      "title" : {
+        $in : ['큰돌', '홍철', '현영','승철']
+      }
+    }, {
+      $push : {
+        "something" : {
+              $each : [1, 2, 3]
+        }
+      }
+    }, {
+      upsert: true, 
+      multi: true, 
+      new : true
+    }).lean();
+  console.log(t)
+}  
+main2();
+``` 
+이외에도 만약에 그 값이 Array이며 push를 하고 싶다면 이렇게 $set부분에 $set이 아닌 $push를 집어 넣으면 됩니다. 
+
+```js
+const main2 = async()=>{  
+  const t = await Photo.updateMany({
+      "title" : {
+        $in : ['큰돌', '홍철', '현영','승철']
+      }
+    }, {
+      $set: {
+        "something2" : 1
+      }, 
+      $addToSet : {
+        "something" : {
+              $each : [1, 2, 3]
+        }
+      }
+    }, {
+      upsert: true, 
+      multi: true, 
+      new : true
+    }).lean();
+  console.log(t)
+}  
+main2();
+``` 
+
+만약에 어떠한 값은 이렇게 set, 정하고 어떠한 값은 push를 하는데 만약에 그 배열이 있다면 있는 것은 그대로 내버려두고 없는 것만 push 하고 싶다면 위와 같이 하면 됩니다. set과 addToSet이 있죠? set으로 어떠한 값을 변경시키고, addToSet으로 중복되는 값은 제외한채 push를 할 수 있습니다. 이렇게 쉽게 json을 설계하듯 query를 마음대로 수정해서 쓰면 됩니다.  
+
+## 4. Delete
+```js
+userModel.deleteMany({}).lean();  
+userModel.collection.drop()  
+```
+제거는 이렇게 하면 됩니다. 
+
+이렇게 간단하게 CRUD를 살펴보았습니다. 이외에 자신이 구현하고 싶은 쿼리가 있다면 [MongooseQueryAPI](https://mongoosejs.com/docs/api/query.html)를 참고하시면서 하면 됩니다. 
 
 ## 2.4.6 aggregate와 mapReduce 성능비교 
 MongoDB에서의 집적된 결과물을 내기 위한 방법은 크게 2가지입니다.
@@ -510,14 +728,7 @@ db.orders.mapReduce(
 		out : "order_totals"
 	}
 ) 
-```
-
-자 그렇다면 aggregate와 mapReduce 성능비교는 어느정도 나는 것일까요?
-
-앞서서 aggregate와 mapReduce의 예제들을 조금씩 살펴보았습니다. 그렇다면 좀 더 자세히 살펴보도록 하겠습니다. 
-
-## 2.4.7 aggregate와 mapReduce 예제와 성능비교
-
+``` 
 
 
 > 참고 : DB에 필요한 지식들
