--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -66,15 +66,9 @@ excerpt: MEVN교과서 (1)
 
 ### 3.2 자바스크립트 최적화  
 - 함수선택, parsInt와 ~~의 성능비교
-- 함수선택, deepCopy 성능비교
-- 함수선택, includes, indexOf 성능비교
-- 객체선언에 따른 성능비교
-- 서버요청최적화 - minify와 HTTP2
-- 서버요청최적화 - 메모이제이션 
-- 로직최적화 : 피벗알고리즘, 시간복잡도 이미지리시트를 찾는 로직
-- 로직최적화 : 서버요청최소화 
-- 페이지로드속도최적화 : LAZY load
-- 페이지로드속도최적화 : 이미지크기 축소 
+- 함수선택, 객체를 복사하는 방법의 선택    
+- 서버요청최적화 - 메모이제이션과 서버요청최소화 
+- UX향상 : LAZY load와 이미지크기 축소    
 
 ### 3.3 CSS 최적화 
 
