--- a/_posts/2019-06-30-MEVN교과서-(4).md
+++ b/_posts/2019-06-30-MEVN교과서-(4).md
@@ -13,12 +13,12 @@ excerpt: MEVN교과서 (4)
 ![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/mevnlogo.jpg)
 
 ## 3. 코드최적화와 패러다임
-코드를 짤 때 그저 로직만을 짜면 절대 안됩니다. 그것은 죄악이며 해야할 짓이 못됩니다. 코드를 짤 때 우리는 확장성, 유연성, 성능 등을 모두 고려해야 합니다. 이렇게 조금씩 그리고 세심하게 짠 코드가 나중에 봤을 때 무한한 행복을 가져올 것입니다. 
+코드를 짤 때 그저 로직만을 짜면 절대 안됩니다. 그것은 죄악입니다. 코드를 짤 때 우리는 확장성, 유연성, 성능 등을 모두 고려해야 합니다. 이렇게 조금씩 그리고 세심하게 짠 코드가 나중에 봤을 때 무한한 행복을 가져올 것입니다. 
 
 ### 3.1 함수형프로그래밍
-그렇다면 어떻게 짜야 할까요? 한 프로젝트당 코드 패러다임을 정해놓고 짜는 것이 중요합니다.패러다임이란 어떻게 짤 것인지를 규정한 것을 말합니다. 예를 들어서 객체지향형으로 짜자, MVC패턴으로 짜자, 함수형프로그래밍으로 짜자 등을 일컫습니다. 자세히 들어가면 margin: 0 px는 margin : 0 으로 놓자 등 아주 세세한 코드 스타일까지 정하는 것을 일컫습니다. 
+그렇다면 어떻게 짜야 할까요? 한 프로젝트당 코드 패러다임을 정해놓고 짜는 것이 중요합니다.패러다임이란 어떻게 짤 것인지를 규정한 것을 말합니다. 예를 들어서 객체지향형으로 짜자, MVC패턴으로 짜자, 함수형프로그래밍으로 짜자 등을 일컫습니다. 자세히 들어가면 `margin: 0 px`는 `margin : 0` 으로 놓자 등 아주 세세한 코드 스타일까지 정하는 것을 일컫습니다. 
 
-저는 코드를 짤 때 함수형프로그래밍으로 짜는 것을 추천하며 이 책에서는 함수형프로그래밍으로 모든 소스코드를 짜도록 하겠습니다. 
+저는 코드를 짤 때 함수형프로그래밍으로 짜는 것을 추천하며 이 책에서는 함수형프로그래밍으로 모든 소스코드를 짜도록 하겠습니다.
 
 ### 3.1.1 함수형프로그래밍의 특징 
 함수형프로그래밍은 작은 순수함수들의 집합으로 최소의 부수효과를 누리는 패러다임입니다.
@@ -448,17 +448,14 @@ test3().then((result)=> {
 ``` 
 
 #### 2. reduce를 통한 집계
-이외에도 reduce를 통해 함수형 프로그래밍을 통하면 쉽게 집계된 데이타를 뽑아낼 수 있습니다. 
+이외에도 reduce를 통해 함수형 프로그래밍을 통하면 쉽게 집계된 데이타를 뽑아낼 수 있습니다. 아래의 예제는 20대 10대 별로 나누어서 count와 나이의 합계를 계산합니다.
 ```js
 const _ = require('lodash') 
 const users = [
-    { id: 1, name: "ID", age: 32 },
-    { id: 2, name: "HA", age: 25 },
-    { id: 3, name: "BJ", age: 32 },
-    { id: 4, name: "PJ", age: 28 },
-    { id: 5, name: "JE", age: 27 },
-    { id: 6, name: "JM", age: 32 },
-    { id: 7, name: "HI", age: 24 }
+    { id: 1, name: "홍철", age: 22 },
+    { id: 2, name: "서영", age: 25 },
+    { id: 3, name: "종선", age: 31 },
+    { id: 4, name: "제호", age: 27 }, 
   ];
 
 const a = _.reduce(users, (info, user)=> {
@@ -472,8 +469,8 @@ console.log(a)
 
 ``` 
 
-함수형 프로그래밍을 한다면 FX.js를 사용하는 것이 좋습니다. 우리나라에서 함수형 프로그래밍을 제일 잘하는 사람을 뽑으라면 유인동개발자님을 뽑을 정도로 훌륭한 분이며 lodash, ramda의 장점을 섞어 만든 partial.js의 다음 버전 라이브러리입니다. 
-사용하기도 편리하고 성능도 좋습니다. 앞으로 이어나갈 모든 코드들에는 fx.js가 포함될 예정입니다. 
+함수형 프로그래밍을 한다면 유인동개발자님이 만든 FX.js를 사용하는 것이 좋습니다. 유인동개발자님은 우리나라에서 함수형 프로그래밍을 제일 잘하는 사람 중 하나이며 lodash, ramda의 장점을 섞어 만든 partial.js의 장본인입니다.  FX.js는 partial.js의 다음 버전 라이브러리입니다. 
+당연히 사용하기도 편리하고 성능도 좋습니다. 앞으로 이어나갈 모든 코드들에는 fx.js가 포함될 예정입니다. 
 함수형 프로그래밍을 조금 더 알고 싶다면 [유인동의 함수형프로그래밍](https://www.inflearn.com/course/%ED%95%A8%EC%88%98%ED%98%95-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/#) 을 보기를 권장드립니다.  
 
 ### 3.2 자바스크립트 최적화 
@@ -487,16 +484,115 @@ console.log(a)
  - 인스턴스, 프로토타입 체인까지 검색하므로 느립니다.
 6. 정규표현식은 간단하게 씁니다. 예를 들어 ble|blue 대신 blu?e를 씁니다.
 
-### 3.2.1 함수선택, parsInt와 ~~의 성능비교
-### 3.2.2 함수선택, deepCopy 성능비교
-### 3.2.3 함수선택, includes, indexOf 성능비교
-### 3.2.4 객체선언에 따른 성능비교
-### 3.2.5 서버요청최적화 - minify와 HTTP2
-### 3.2.6 서버요청최적화 - 메모이제이션 
-### 3.2.7 로직최적화 : 피벗알고리즘, 시간복잡도 이미지리시트를 찾는 로직
-### 3.2.8 로직최적화 : 서버요청최소화 
-### 3.2.9 페이지로드속도최적화 : LAZY load
-### 3.2.10 페이지로드속도최적화 :  이미지크기 축소  
+### 3.2.1 함수선택, parseInt와 ~~의 성능비교
+예를 들어 실수형을 정수형으로 만드는 연산이 있습니다. 자바스크립트에서 대표적인 함수로는 parseInt를 뽑을 수 있습니다. 하지만 ~~이라는 비트연산자를 통하면 좀 더 빠르게 구할 수 있습니다. ~~는 ~라는 비트를 전체를 뒤집는 비트연산자를 한 번 더 한 것이며 이를 이용하면 더 빠르게 됩니다. 
+[JSMATCH](http://jindo.dev.naver.com/jsMatch/index.html)라는 네이버에서 만든 비교사이트를 통해 비교해봅시다. 
+
+#### A. parseInt
+```js
+for(let i = 0; i < 100000; i++){
+	let a = 123.456789
+	b = parseInt(a)
+} 
+```
+
+#### B. ~~
+```js
+for(let i = 0; i < 100000; i++){
+	let a = 123.456789
+	b = ~~(a)
+} 
+```
+
+![비교결과](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/3_parseInt.PNG)
+
+`~~`가 조금 더 빠릅니다.
+
+ > ~ = -(n + 1), 비트연산자를 통해 적용한 겨로가는 부호 있는 32비트 정수로 반환됩니다.  - ECMA5 SPEC (그렇기 때문에 2 ^ 31 + 1 이상은 쓸 수 없습니다.)
+
+
+이러한 비트 연산자는 실제로도 많이 쓰입니다. 유명한 오픈소스인 D3.js의 184번째 줄(5.9.4버전)을 보면`n = Math.max(0, Math.ceil((stop - start) / step)) | 0,`이라는 코드가 있습니다. `| 0` 은 제가 ~~과 똑같은 역할을 하는 비트연산자 입니다. 실제로 ~~보다는 `| 0`이 더 성능이 좋습니다. 하지만 그렇게는 차이가 많이 나지 않으니 ~~를 써도 무방합니다. 
+
+이외에도 indexOf보다는 includes가 성능에 좋으니 includes를 써야 하고 불필요한 객체 선언을 없애서 메모리소모를 줄여서 최적화 시키는 방법이 있습니다.  
+
+### 3.2.2 함수선택, 객체를 복사하는 방법의 선택 
+자바스크립트에서 객체를 할당하게 되면 주소값을 참조하게 되는 얕은 복사가 일어납니다. 그렇기 때문에 그 이후에 그 값을 변경하면 원래의 객체가 변화게 되어 사이드 이펙트가 일어날 수 있는 상황에 접하게 됩니다. 그래서 우리는 deepCopy라는 깊은 복사를 해야 하는데 객체의 깊이에 따라 좀 더 효율적인 방법이 있습니다.  
+
+#### 스프레드 연산자와 Object.assign
+아래의 2가지 방법은 JSON객체의 깊이가 1일 때까지 유효합니다.
+```js
+const a ={"b" : 1}
+let b = {...a}
+let c = Object.assign({}, a);
+c.b = 3;
+b.b = 3;
+console.log(a)
+//a는 바뀌지 않는다
+```
+하지만 아래처럼 깊이가 2이상일 경우 다시 얕은 복사처럼 바뀌게 됩니다.
+```js
+const a ={
+    "b" : 1, 
+    "c" : {
+        "d" : 2
+    }
+}
+let b = {...a}
+let c = Object.assign({}, a);
+c.c.d = 3;
+console.log(a)
+//a가 바뀌게 된다. 
+``` 
+그렇다면 어떻게 깊은 복사를 해야 할까요?
+
+#### 재귀함수
+재귀함수 copy가 재귀적으로 작동하면서 해당 value가 object임을 검사함과 동시에 null이 아님을 검사해서 객체가 만약에 또 있다면 또다시 재귀를 돌리는 형식입니다.
+```js
+const copy = o =>{ 
+    let out = {}; 
+    let value, key;  
+    for(key in o){
+        value = o[key];
+        out[key] = (typeof value === "object" && value != null) ? copy(value) : value;
+    }
+    return out; 
+}
+const a ={
+    "b" : 1, 
+    "c" : {
+        "d" : 2
+    }
+} 
+let b = copy(a)
+b.c.d = 4; 
+console.log(a)
+```  
+#### JSON.parse와 JSON.stringify
+이렇게 아예 문자열로 만든 다음에 다시 객체형태로 반환하는 방법이 있습니다. 
+```js
+const a ={
+    "b" : 1, 
+    "c" : {
+        "d" : 2
+    }
+} 
+let b = JSON.parse(JSON.stringify(a))
+b.c.d = 4; 
+console.log(a)
+``` 
+
+그렇다면 스프레드 연산자와 Object.assign, 재귀함수 copy와 JSON.parse(JSON.stringify) 중에 뭘 써야 할까요? 그것은 프로젝트 때의 객체의 깊이와 객체안에 뭐가 담기는지 파악하고 성능테스트를 진행한 후 결정하면 됩니다. 
+
+  > 필자는 프로젝트를 진행할 때 JSmatch를 통해 성능테스트를 했고 객체에 따라 JSON.parse가 더 좋을 때가 있고 copy가 더 좋을 때도 있었습니다.
+ 
+### 3.2.3 서버요청최적화 - 메모이제이션과 서버요청최소화 
+예를 들어 10mb짜리 API요청 10개와 100mb짜리 API요청 1개가 있습니다. 무엇이 빠를까요? HTTP2는 몰라도 HTTP에서는 전자가 더 느립니다. 서버요청은 최대한 줄여야 하며 중복되는 요청의 경우는 메모이제이션을 통해 재사용해야 합니다. 메모이제이션은 후에 실시간 데이터 프로젝트를 하며 살펴보도록 하겠습니다. 
+
+### 3.2.4 UX향상 : LAZY load와 이미지크기 축소   
+흔히들 UX를 향상시키자고 합니다. UX를 향상시킨다는 것은 홈페이지를 눌렀을 때 빠르게 뜨는 것이 포함이 됩니다. 여러가지가 있지만 이것은 제일 중요한 요소 중 하나입니다. 사용자가 처음 페이지를 켰을 때 필요한 것은 그렇게 많지 않습니다. 지금 사용자가 보고 있는 영역의 이미지만이 필요할 뿐이고 그 아래의 이미지는 필요하지 않습니다. 그렇기 때문에 사용자가 보고 있는 영역의 이미지만 로드를 하고 추후 나중에1 게으르게 이미지를 로드하는 것을  LAZY load라고 합니다. 처음 보여주는 썸내일의 이미지를 저화질로 하는 것도 포함합니다. 
+
+그렇다면 LAZY load는 어떻게 구현할까요? 
+
 
 ### 3.3 CSS 최적화 
 자 이제 코드를 어떻게 짜는 지를 알았다면 스타일을 어떻게 짜는 것이 관건입니다. CSS를 팀원들끼리 어떻게 짜는지 맞추는게 추후 아름다운 코드를 위한 지름길입니다. 꼭 이렇게 안 맞춰도 됩니다. 하나의 예시입니다. 이런 식으로 프로젝트를 진행하기전 어떻게 코드를 짤 것인지를 맞춰야 합니다.
@@ -557,3 +653,5 @@ repaint와 reflow가 일어나지 않습니다.
 
 #### 6. 스타일을 재사용한다. 
 제일 중요합니다. 많은 컴포넌트들 사이에서 재사용할 클래스를 미리 지정해 놓고 사용하는 것이 중요합니다. 예를 들어 A컴포넌트에서 `display : flex`를 사용하는데 B 컴포넌트에서도 `display : flex`를 사용한다면 좋지 않습니다. 부모 컴포넌트에서  `display : flex`를 정의한 후 재사용하는 것이 좋습니다. 
+
+이렇게 함수형프로그래밍 패러다임부터 시작해서 어떻게 코드를 짜는지 자바스크립트, css에서 살펴보았습니다. 이제는 실전입니다! 이제 예술품사이트를 만들고 실시간 데이터 시각화 프로그램을 만들 것입니다. 이렇게 실제로 웹 어플리케이션을 구현해서 실력을 키운다면 후에 훌륭한 개발자가 될 수 있을 것입니다
