--- a/_posts/2019-06-30-MEVN교과서-(4).md
+++ b/_posts/2019-06-30-MEVN교과서-(4).md
@@ -301,7 +301,7 @@ function *map(f, list){
  - 이터레이터: `{ value, done }` 객체를 리턴하는 `next()` 를 가진 값
  - 이터러블/이터레이터 프로토콜: 이터러블을 `for...of`, `전개 연산자` 등과 함께 동작하도록한 규약
 
- > ... 전개연산자는 적용되는 공간에서의 인수들(배열, key-value)에 따라 그 공간에 맞는 인수 또는 요소로 확장할 수 있게 합니다. 전개연산자는 이렇게 활용할 수도 있습니다. const [head, ...tail] = f();
+... 전개연산자는 적용되는 공간에서의 인수들(배열, key-value)에 따라 그 공간에 맞는 인수 또는 요소로 확장할 수 있게 합니다. 전개연산자는 이렇게 활용할 수도 있습니다. `const [head, ...tail] = f();`
 
 #### 8.3 제너레이터와 이터러블
 제너레이터는 커스텀형 이터레이터로 함수자체가 이터러블을 생성합니다.
@@ -480,12 +480,12 @@ console.log(a)
 2. 간단하더라고 if { 중괄호를 사용해야 한다. 
 3. 문자열은 무조건 템플릿문자열을 사용해야 합니다.
 4. 한 컴포넌트, 모듈의 길이는 200줄 이하로 작성되어야 한다.
-5. 배열순회의 경우 for-in 루프를 쓰지 않습니다. (객체 속성순회일경우에는 씁니다.) 
- - 인스턴스, 프로토타입 체인까지 검색하므로 느립니다.
+5. 배열순회의 경우 for-in 루프를 쓰지 않습니다. (객체 속성순회일경우에는 씁니다.) 왜냐하면 인스턴스, 프로토타입 체인까지 검색하므로 느립니다.
 6. 정규표현식은 간단하게 씁니다. 예를 들어 ble|blue 대신 blu?e를 씁니다.
 
 ### 3.2.1 함수선택, parseInt와 ~~의 성능비교
 예를 들어 실수형을 정수형으로 만드는 연산이 있습니다. 자바스크립트에서 대표적인 함수로는 parseInt를 뽑을 수 있습니다. 하지만 ~~이라는 비트연산자를 통하면 좀 더 빠르게 구할 수 있습니다. ~~는 ~라는 비트를 전체를 뒤집는 비트연산자를 한 번 더 한 것이며 이를 이용하면 더 빠르게 됩니다. 
+
 [JSMATCH](http://jindo.dev.naver.com/jsMatch/index.html)라는 네이버에서 만든 비교사이트를 통해 비교해봅시다. 
 
 #### A. parseInt
@@ -546,7 +546,7 @@ console.log(a)
 그렇다면 어떻게 깊은 복사를 해야 할까요?
 
 #### 재귀함수
-재귀함수 copy가 재귀적으로 작동하면서 해당 value가 object임을 검사함과 동시에 null이 아님을 검사해서 객체가 만약에 또 있다면 또다시 재귀를 돌리는 형식입니다.
+재귀함수 copy가 재귀적으로 작동하면서 해당 value가 object임을 검사함과 동시에 null이 아님을 검사해서 객체가 만약에 또 있다면 또다시 재귀함수를 실행시키는 형식입니다.
 ```js
 const copy = o =>{ 
     let out = {}; 
@@ -581,7 +581,7 @@ b.c.d = 4;
 console.log(a)
 ``` 
 
-그렇다면 스프레드 연산자와 Object.assign, 재귀함수 copy와 JSON.parse(JSON.stringify) 중에 뭘 써야 할까요? 그것은 프로젝트 때의 객체의 깊이와 객체안에 뭐가 담기는지 파악하고 성능테스트를 진행한 후 결정하면 됩니다. 
+그렇다면 스프레드 연산자와 `Object.assign`, 재귀함수 copy와 `JSON.parse(JSON.stringify)` 중에 뭘 써야 할까요? 그것은 프로젝트 때의 객체의 깊이와 객체안에 뭐가 담기는지 파악하고 성능테스트를 진행한 후 결정하면 됩니다. 
 
   > 필자는 프로젝트를 진행할 때 JSmatch를 통해 성능테스트를 했고 객체에 따라 JSON.parse가 더 좋을 때가 있고 copy가 더 좋을 때도 있었습니다.
  
@@ -589,7 +589,9 @@ console.log(a)
 예를 들어 10mb짜리 API요청 10개와 100mb짜리 API요청 1개가 있습니다. 무엇이 빠를까요? HTTP2는 몰라도 HTTP에서는 전자가 더 느립니다. 서버요청은 최대한 줄여야 하며 중복되는 요청의 경우는 메모이제이션을 통해 재사용해야 합니다. 메모이제이션은 후에 실시간 데이터 프로젝트를 하며 살펴보도록 하겠습니다. 
 
 ### 3.2.4 UX향상 : LAZY load와 이미지크기 축소   
-흔히들 UX를 향상시키자고 합니다. UX를 향상시킨다는 것은 홈페이지를 눌렀을 때 빠르게 뜨는 것이 포함이 됩니다. 여러가지가 있지만 이것은 제일 중요한 요소 중 하나입니다. 사용자가 처음 페이지를 켰을 때 필요한 것은 그렇게 많지 않습니다. 지금 사용자가 보고 있는 영역의 이미지만이 필요할 뿐이고 그 아래의 이미지는 필요하지 않습니다. 그렇기 때문에 사용자가 보고 있는 영역의 이미지만 로드를 하고 추후 나중에 게으르게 이미지를 로드하는 것을  LAZY load라고 합니다. 처음 보여주는 썸내일의 이미지를 저화질로 하는 것도 포함합니다. 
+흔히들 UX를 향상시키자고 합니다. UX를 향상시킨다는 것은 홈페이지를 눌렀을 때 빠르게 뜨는 것이 포함이 됩니다. 여러가지가 있지만 이것은 제일 중요한 요소 중 하나입니다. 사용자가 처음 페이지를 켰을 때 필요한 것은 그렇게 많지 않습니다. 
+
+**지금 사용자가 보고 있는 영역의 이미지만**이 필요할 뿐이고 그 아래의 이미지는 필요하지 않습니다. 그렇기 때문에 사용자가 보고 있는 영역의 이미지만 로드를 하면 될뿐이죠. 이렇게 추후 나중에 게으르게 이미지를 로드하는 것을  LAZY load라고 합니다. 
 
 그렇다면 LAZY load는 어떻게 구현할까요? 
 먼저 심플한 서버를 구축합니다. 
@@ -654,7 +656,7 @@ html을 만듭니다. 트와이스 모모를 좋아하기 때문에 모모이미
 </body>
 </html>
 ``` 
-![참좋은예제죠?](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/3_img_lazy.PNG)
+![lazy_load전](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/3_img_lazy.PNG)
 
 정말 이쁜 예제 입니다. 하지만 15장의 이미지를 한꺼번에 로드하는 것은 부하가 큽니다. 자 이제 lazyload를 구현해봅시다. 
 
@@ -693,12 +695,21 @@ document.addEventListener("DOMContentLoaded", function() {
     window.addEventListener("orientationchange", lazyLoad);
   });
 ``` 
+
+자 완성한 모습입니다. 
+스크롤 하기전에는 blur 모모 이미지가 뜹니다.
+![스크롤하기전](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/3_img_lazy1.PNG)
+
+그러나 스크롤 한 후에는 실제 모모 이미지가 뜹니다. 완성입니다!
+![스크롤하기후](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/3_img_lazy2.PNG) 
+
 라이브러리로는 lozad.js / yall.js 가 있습니다. 모두 똑같은 원리입니다. 보지 않는다면 placholder 이미지 또는 blur이미지를 셋팅하고 사용자가 본다면 실제로 보는 이미지를 놓으면 됩니다. 
 이외에도 template를 사용하는 방법이 있지만 권장하지 않습니다. 
 
- > 애초에 이미지의 용량을 줄이는 것도 중요합니다. 이미지 용량을 줄이는 사이트로는 https://compressjpeg.com/ 와 https://tinypng.com/ 를 추천합니다. 
+또한, 애초에 이미지의 용량을 줄이는 것도 중요합니다. 이미지 용량을 줄이는 사이트로는 https://compressjpeg.com/ 와 https://tinypng.com/ 를 추천합니다. 
 
 
+ > 이 예제에서는 별도의 서버를 두었지만 굳이 서버를 두지 않고 index.html만 눌러도 잘 작동이 됩니다. 보다 실제 환경적인 예제를 위해 서버를 구축했습니다.
 
 ### 3.3 CSS 최적화 
 자 이제 코드를 어떻게 짜는 지를 알았다면 스타일을 어떻게 짜는 것이 관건입니다. CSS를 팀원들끼리 어떻게 짜는지 맞추는게 추후 아름다운 코드를 위한 지름길입니다. 꼭 이렇게 안 맞춰도 됩니다. 하나의 예시입니다. 이런 식으로 프로젝트를 진행하기전 어떻게 코드를 짤 것인지를 맞춰야 합니다.
@@ -727,11 +738,8 @@ article{
 #### 3. CSS SPRITE이미지를 쓰자
 서버요청을 줄이기 위해 반복되는 이미지는 한장의 이미지를 요청하고 background속성을 이용해서 이미지를 나타낸다.  
 
-#### 4. 하위 선택자는 좀 더 깔끔하게 한다. 
-```css
-library book article
-library article
-```
+#### 4. 하위 선택자는 좀 더 깔끔하게 한다.  
+`library book article`보다는 `library article`이 좋습니다. 
 
 #### 5. repaint 와 reflow를 최소화 한다 
 
@@ -760,4 +768,4 @@ repaint와 reflow가 일어나지 않습니다.
 #### 6. 스타일을 재사용한다. 
 제일 중요합니다. 많은 컴포넌트들 사이에서 재사용할 클래스를 미리 지정해 놓고 사용하는 것이 중요합니다. 예를 들어 A컴포넌트에서 `display : flex`를 사용하는데 B 컴포넌트에서도 `display : flex`를 사용한다면 좋지 않습니다. 부모 컴포넌트에서  `display : flex`를 정의한 후 재사용하는 것이 좋습니다. 
 
-이렇게 함수형프로그래밍 패러다임부터 시작해서 어떻게 코드를 짜는지 자바스크립트, css에서 살펴보았습니다. 이제는 실전입니다! 이제 예술품사이트를 만들고 실시간 데이터 시각화 프로그램을 만들 것입니다. 이렇게 실제로 웹 어플리케이션을 구현해서 실력을 키운다면 후에 훌륭한 개발자가 될 수 있을 것입니다
+이렇게 함수형프로그래밍 패러다임부터 시작해서 어떻게 코드를 짜는지 자바스크립트, css에서 살펴보았습니다. 이제는 실전입니다! 이제 예술품사이트를 만들고 실시간 데이터 시각화 프로그램을 만들 것입니다.
