--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -16,9 +16,9 @@ excerpt: MEVN교과서 (1)
 # 지은이의 말
 이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징까지 알아보게 될 것입니다.
 
-저는 비전공자 출신으로 2014년에 처음 공주대학교 커뮤니티를 독학으로 만들고 개발자가 되면서 기본내용은 간단히 설명하고 경험 중심의 코드를 통해 좀 더 쓸모있는 책을 만들고 싶었습니다. 이 책을 통해 비전공자들도 거뜬히 커뮤니티 한 개 정도는 만들 수 있는 세상이 오길 바랍니다.
+인터넷에 간단히 검색해서 찾을 수 있는 내용들은 최대한 배제해고 최대한 경험과 노하우, 그리고 아름다운 코드 중심의 설명이 가득한 책이 되고자 노력했습니다. 많은 도움이 되었으면 합니다.
 
-아울러 모든 코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내셔서 해답을 찾길 바랍니다. 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 말 부탁드립니다. 
+아울러 모든 코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내셔서 해답을 찾길 바랍니다. 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 충고들 부탁드립니다. 
 
 # 독자대상
 이 책을 보려면 다음 기술에 대한 기본 지식이 있어야 합니다. 
@@ -72,70 +72,80 @@ excerpt: MEVN교과서 (1)
 
 ### 3.3 CSS 최적화 
 
-## 4. 미술품 결제 사이트 제작  
-### 4.1 아키텍처
+## 4. 실시간 데이터시각화사이트제작  
+
+### 4.1 시각화 라이브러리 D3.js
+- D3의 구조 및 다른 시각화라이브러리
+- 간단한 예제 circle, rectangle, data, enter, selectAll  
+
+### 4.2 D3.js : 지도매핑모듈
+- topojson과 geojson비교
+- 메르카토르 도법과 geolib 라이브러리
+- 지도 매핑모듈과 zoom이벤트
+
+### 4.3 D3.js : 증가하는 숫자
+- d3.pie소개
+- d3 interporate 
+- 증가하는 숫자 만들기  
+  
+### 4.4  실시간 센서시각화사이트 : REST API 구축
+- REST API 특징
+- CORS 및 주의사항
+- 요청 제한 및 IP 설정   
+- 센서생성 서버 REST API 구축
+ 
+### 4.5  실시간 센서시각화사이트 : 실시간통신과 디자인
+- websocket방식과 polling 방식 비교
+- socket.io를 이용한 간단한 채팅 예제
+- Vuex 및 프로젝트 뼈대 구축
+- 디자인 가이드 구축
+
+### 4.6  실시간 센서시각화사이트 : 차트 컴포넌트 
+- 차트 컴포넌트제작
+- 고정된 데이타를 기준으로 차트 
+- 업데이트되는 데이타를 기준으로 차트
+- tooltip 이벤트
+- REST API와 연동되어 실제 데이터와 차트구축
+- 메모이제이션 알고리즘을 적용하여 서버요청 최적화 
+
+### 4.7  실시간 센서시각화사이트 : 모니터링 모듈 
+- CPU, 하드웨어 모니터링 모듈 제작
+
+## 5. 미술품 결제 사이트 제작  
+### 5.1 아키텍처
  - MongoDB 스키마 구축
  - 디렉토리 설계
  - 이벤트 설계
 
-### 4.2 JWT 인증방식 및 구축
+### 5.2 JWT 인증방식 및 구축
  - JWT 소개
  - postman을 통한 테스트
 
-### 4.3 JWT Passport를 이용한 naver, kakao, facebook 로그인  
+### 5.3 JWT Passport를 이용한 naver, kakao, facebook 로그인  
  - 작가별 로그인페이지
  - JWT 연동
 
-### 4.4 작가별 미술품정보 입력모듈  
+### 5.4 작가별 미술품정보 입력모듈  
 - 이미지 업로드 모듈 
 - summernote 또는 toast UI editor를 통한 입력 모듈
 
-### 4.5 개발보안 
+### 5.5 개발보안 
 - XSS, CSRF토큰 등 보안 주의사항 
 - axios의 validateStatus, cancelToken 활용
 
-### 4.6 DB구축 
+### 5.6 DB구축 
 - DB 저장 모듈제작 
 
-### 4.7 이미지게시판
+### 5.7 이미지게시판
 - 이미지 게시판 페이지 구축
 - 무한 스크롤 이벤트
 - Lazy load 적용 
 
-### 4.7 결제시스템
+### 5.7 결제시스템
 - 네이버페이 SDK를 이용한 거래연동
 - 카카오페이 SDK를 이용한 거래연동
 - PAYCO SDK를 이용한 거래연동
 
-## 5. 실시간 데이터시각화사이트제작  
-### 5.1 REST API 구축
- - REST API 특징
- - CORS 및 주의사항
- - 요청 제한 및 IP 설정  
-
-### 5.2 실시간통신 
-- websocket방식과 polling 방식 비교
-- 간단한 채팅 예제제작
-
-### 5.3 시각화 라이브러리 D3.js
-- 구조 및 D3의 장단점
-- 간단한 예제
- - circle, rectangle, data, enter, selectAll 
-
-### 5.4 재사용컴포넌트 : 차트 구축
-- 차트 컴포넌트제작
-  - 고정된 데이타를 기준으로 차트 
-  - 업데이트되는 데이타를 기준으로 차트
-  - tooltip 이벤트
-  - REST API와 연동되어 실제 데이터와 차트구축
-  - 메모이제이션 알고리즘을 적용하여 서버요청 최적화 
-
-### 5.6 재사용컴포넌트 : 지도 구축 
-- topojson과 geojson비교
-- 메르카토르 도법 소개
-- geolib 라이브러리 소개
-- 지도 매핑모듈제작
-- zoom이벤트추가 
  
 ## 부록 A. 안정적인 서버를 위한 구축과정
 ### A.1 로그시스템
@@ -159,5 +169,12 @@ excerpt: MEVN교과서 (1)
 - BABEl
 - 벤더 프리픽스제거 
 
+## 부록 D. 웹개발자에게 꼭 필요한 상식들
+- promise 사용법
+- JavaScript this의 이해
+- JavaScript 호이스팅
+- JavaScript 실행컨텍스트와 클로저
+- 브라우저 렌더링의 이해
+- axios 와 비동기통신
 
  
