--- a/_posts/2019-06-30-MEVN교과서-(2).md
+++ b/_posts/2019-06-30-MEVN교과서-(2).md
@@ -9,7 +9,7 @@ sitemap: yes
 excerpt: MEVN교과서 (2)
 
 ---   
-![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/mevnlogo.jpg)
+![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/MEVN_1장.jpg)
 
 # 1. 준비하기
 불을 지필 때는 라이터가 필요하고 스테이크를 만들기 위해서는 목살이라는 재료가 필요합니다. 웹앱을 만들기 위해서는 아름다운 에디터가 필요합니다. 많은 에디터가 있지만 저는 VS CODE를 추천하며 지금부터 VS CODE 환경설정 방법에 대해 살펴보겠습니다. 
