--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -60,7 +60,7 @@ var chart = new Chart(ctx, {
 ```
 #### echarts.js 버전 : 4.2.1
 echarts.js는 사용하기가 매우 쉽습니다. 
-라인차트를 구현하는데 이정도의 script만 있으면 됩니다. 또한, geomap, Radar Chart, Heatmap, Graph, Treemap, flow 등 여러가지를 구현할 수 있습니다. 필자도 토이 프로젝트를 할 때 빠르게 차트를 구현하기 위해 echarts를 구현할 정도로 정말 쉽고 빠르게 만들 수 있습니다. 써보면 아시겠지만 chart.js보다 쉽습니다. 하지만 용량이 상당이 거대하기 때문에 큰 프로젝트에서는 추천하지 않습니다.
+라인차트를 구현하는데 이정도의 script만 있으면 됩니다. 또한, geomap, Radar Chart, Heatmap, Graph, Treemap, flow 등 여러가지를 구현할 수 있습니다. 필자도 토이 프로젝트를 할 때 빠르게 차트를 구현하기 위해 echarts를 구현할 정도로 정말 쉽고 빠르게 만들 수 있습니다. 써보면 아시겠지만 chart.js보다 쉽습니다. 하지만 용량이 상당히 거대하기 때문에 큰 프로젝트에서는 추천하지 않습니다.
 ```js
 option = {
     xAxis: {
@@ -85,13 +85,228 @@ three.js는 가장 유명한 자바스크립트 3D 라이브러리 중 하나입
 #### D3.js 버전 : 5.9.7
 D3.js는 3D는 아니지만 2D로 구현이 가능한 모든 시각화적인 것들을 구현할 수 있습니다. 차트, 맵은 기본이며 중력도 구현이 가능하며 워드클라우드, 플로우, 못하는 것이 없습니다. 하지만 D3.js를 이용하기 위해서는 데이타가 어떻게 그려지는지 원리부터 차근차근 알아가야 쓸 수 있습니다. chart.js나 echart.js처럼 간단히 데이타만 넣고 알아서 차트가 그려지지는 않습니다. 
 
-그러나 이러한 번거로움을 뒤로한채 최고라고 말할 수 있는 이유는 237kb라는 작은 용량으로 정말 다양한 시각화적인 요소를 표현할 수 있다는 점과 매우 작은 부분 까지 커스터마이징하기가 쉽다는 것입니다. 물론 chart.js나 echart.js로도 가능하지만 설계될 때 그렇게 커스터마이징을 설계하지 않았는지 커스터마이징을 하려면 chart.js 내부안에 들어가서 바꿔야 하거나 echart.js로 들어가 바꿔야합니다.
+그러나 이러한 번거로움을 뒤로한채 최고라고 말할 수 있는 이유는 237kb라는 작은 용량으로 정말 다양한 시각화적인 요소를 표현할 수 있다는 점과 매우 작은 부분 까지 커스터마이징하기가 쉽다는 것입니다. 그리고 만든사람이 무려 json의 창시자, 마이클 보스톡입니다. 최신 리액티브 프로그래밍을 반영하는 점이나 빠르게 업데이트하는 면도 눈여겨볼만한 부분입니다.
 
-#### 4.1.2 간단한 예제 circle, rectangle, data, enter, selectAll  
+물론 chart.js나 echart.js로도 가능하지만 설계될 때 그렇게 커스터마이징을 설계하지 않았는지 커스터마이징을 하려면 chart.js 내부안에 들어가서 바꿔야 하거나 echart.js로 들어가 바꿔야합니다. 
 
 ### 4.2 D3.js : 지도매핑모듈
+D3.js로는 많은 것을 만들 수 있습니다. 그 중에 하나가 바로 지도입니다. 
+
 #### 4.2.1 topojson과 geojson비교
-#### 4.2.2 메르카토르 도법과 geolib 라이브러리
+지도를 그리기 앞서 topojson과 geojson에 대해 알아봅시다. 
+
+topojson이나 geojson 모두 지도를 그리기 위한 재료인데요. 
+
+다양한 지리적 데이터 구조를 표현하기 위해 인코딩된 json입니다.
+
+좀 더 자세히 설명하자면, 지도를 그리는데 있어 레스터 방식과 벡터 방식이 있습니다. 레스터 방식은 이미지를 확대하면 깨지는 픽셀단위의 그림을 생각하면 되고 벡터 방식은 픽셀데이터가 아닌 점, 선 , 면 등 기하학적인 모양을 저장하며 확대하더라도 "깨지지 않는" 데이터 방식을 말합니다. 이 벡터 방식을 가지고 있는 지리데이타 포맷중에 geoJSON, topoJSON 등이 있으며 오늘은 topojson을 쓸 것입니다.  
+
+topojson은 geojson에 비해 파일 사이즈가 작은 장점을 가지고 있으며,  
+
+기하학적인 조정을 json파일에 가한다면 geojson을 쓰고, 그렇지 않다면 심플한 topojson을 씁니다. 
+
+또한 geojson은 coordinate속성을 반드시 있어야 하며 경계정보가 중복되어서 나타납니다. 
+
+하지만 topojson은 경계는 arc속성으로 이루어져 중복이 되지 않고 위상(topology)에 따라 인코딩됩니다. 따라서 topojson이 geojson보다 약 10배정도 가볍습니다. 
+
+자 이제부터 실제 코드로 넘어가서 하나하나 살펴보도록 하겠습니다. 
+
+```js
+import * as d3 from 'd3';
+import * as topojson from 'topojson';
+```
+D3와 topojson을 `import` 시킵니다. 
+이 불러오는 방법은 ES6모듈 포맷방식입니다.  
+
+ > 참고 : 자바스크립트 모듈문법
+
+자바스크립트 모듈문법 중 CommonJS모듈과 ES6모듈 포맷이 있습니다.
+ * UMD와 AMD, System.register 모듈 포맷 방식은 여기서 설명하지 않습니다.
+
+CommonJS 포맷은 Node.js에서 사용되며 `require`와 module.exports를 사용해서 의존성과 모듈을 정의합니다. 아래와 같은 형식이죠.
+```js
+const a1 = require('./a1.js')
+const a2 = require('./a2.js')
+
+module.exports = function (){
+
+}
+```
+ES6 모듈 포맷은 import와 export를 사용합니다. 
+```js
+//특정 함수인 mapC만을 가져올 수 있으며
+import { mapC } from 'fxjs';
+//전체를 다 불러서 d3란 네임스페이스를 지정할 수 있습니다.
+import * as d3 from 'd3';
+
+export default curry(function mapC(f, iter) {
+  return takeAllC(mapLazy(f, iter));
+}); 
+```
+```js
+const koreaMap = require('../map/skorea_municipalities_topo_simple.json');
+const _map = topojson.feature(koreaMap, koreaMap.objects.skorea_municipalities_geo);
+const center = d3.geoCentroid(_map);
+```
+우리나라 topojson파일을 로드하고 `topojson.feature`을 통해 _map이라는 변수에 맵에 관련된 정보를 할당합니다. 그리고 그 맵의 중앙값을 설정합니다.   
+```js 
+const width = 1000;
+const height = 1000;
+const svg = d3
+.select('.d3')
+.append('svg')
+.attr('width', width).attr('height', height);
+const map = svg.append('g'); 
+```
+기본 셋팅입니다. 우리가 그릴 캔버스를 설정해 놓읍시다. `class="d3"`를 가지고 있는 DOM에 `svg`태그를 `append`시키고 그 영역에 width의 값과 height의 값을 설정합니다. 그리고 그 svg에 우리가 map을 만들것이기 때문에 많은 요소들이 들어갑니다. 그러므로 group으로 감싸줘야 하므로 g태그를 붙입니다. 
+
+이것이 D3로 시각화하는 첫단계입니다. 
+1. 재료를 선택하고(topojson) 
+2.그 재료를 쓸 캔버스를 설정(select, append, attr)
+
+```js
+let projection = d3.geoMercator()
+.scale(1)
+.translate([0, 0]); 
+```
+이 지도의 투사법은 메르카토르 투사법을 씁니다. 지구는 동그라한 구형태이기 때문에 이를 평면에 펼쳐서 보기 위해서는 투사법이 존재하며 많은 투사법이 있지만 우리가 많이 보는 지도가 바로 메르카토르 투사법을 쓴 지도 입니다. 메르카토르투사법, 초기 스케일, 초기 translate를 설정해서 초기 projection 이라는 투사법이라는 객체를 셋팅합니다. 
+ > 이외에도 Orthographic이라는 투사법도 있습니다. 
+
+        const path = d3.geoPath().projection(projection);
+        const bounds = path.bounds(geojson);
+        const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
+        const heightScale = (bounds[1][1] - bounds[0][1]) / height; 
+        const scale = 1 /Math.max(widthScale, heightScale);
+        const xoffset = width/2 - scale * (bounds[1][0] + bounds[0][0]) /2 + 10; 
+        const yoffset = height/2 - scale * (bounds[1][1] + bounds[0][1])/2 + 80; 
+        const offset = [xoffset, yoffset];
+        projection.scale(scale).translate(offset);
+ 이제 topojson이란 위경도의 정보들을 이용, 미리 설정해 놓은 투사법으로 패스를 땁니다. 우리가 보고 싶은 것은 이 패스의 중점을 보고 싶습니다. 우리나라의 중점을 말이죠 그렇기 위해서 xoffset과 yoffset등을 설정합니다. 좀 더 자세히 설명하겠습니다. 
+
+​
+
+d3.geoPath().projection(projection)
+
+아까 만들어 놓은 projection, 투사법으로 우리가 그리는 지도인 path 객체를 따냅니다. (자 path객체가 드디어 완성되었습니다. )
+
+        const bounds = path.bounds(geojson);
+        const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
+        const heightScale = (bounds[1][1] - bounds[0][1]) / height; 
+ path.bounds(geojson)
+
+우리는 이 path로 부터 중심을 잡고 싶습니다. 즉 경계를 잡고 싶다는 것이죠. 그러하려면 bounds를 써야 합니다.
+
+​
+
+bounds
+
+bounds의 1차원배열은 path의  xmax와 xmin을 가리킵니다. bounds[0][x].. 의 0에서 0, 1을 통해 xmax와 xmin을 나타낼 수 있습니다.  즉, 최소경도, 최대경도(longitude)를 가리키게 됩니다. 
+
+bounds의 2차원배열은  ymax와 ymin을 가리킵니다. bounds[x][0]..의 0에서 0, 1을 통해 ymax와 ymin을 가리킵니다. 즉, 최소위도, 취대 위도를 가리킵니다. (latitude)
+
+
+scale
+
+그 다음 스케일을 정의해줍니다. 이 스케일은 지도에서 축척을 의미합니다. 넓은 우리나라 땅덩어리를 우리는 작은 화면에 표시해야 합니다.  일단 우리가 구한것은 path의 가장자리를 구한 것입니다. 
+
+이것중에서 가장 최대값을 
+
+        const widthScale = (bounds[1][0] - bounds[0][0]) / width; 
+        const heightScale = (bounds[1][1] - bounds[0][1]) / height;  
+        const scale = 1 /Math.max(widthScale, heightScale);
+ 이렇게 이용해서 축척을 만들어줍니다. 1 : 5만배의 지도를 표시할 때 1 : 50000이라고 나타냅니다. 그걸 우리는 1 / maxScale로 나타낸 것입니다.    
+
+​
+
+translate
+
+그 다음엔 translate를 정의해주어야 합니다. 
+
+우리가 흔히 css로 가로, 세로 중앙 정렬할 때 어떻게 하죠? translate로 일단 사물을 옮기고 그 사물의 "크기"만큼 또 옴깁니다. 
+
+
+그렇기 때문에  우리가 보여주는 크기의 반을 translate를 함과 동시의 bounds 즉, 지도를 그리는 패스들의 중점을 잡고 그 크기만큼도 이렇게 옮겨줍니다..! 
+
+        map
+        .selectAll('path').data(geojson.features)
+        .enter().append('path') 
+        .attr('d', path);  
+ 짠..! 이렇게만 하면 지도가 완성이 됩니다..! 
+
+
+3. 자몽을 놓을 위도 경도에 따라 매핑하기
+
+이제 자몽을 놓아 봅시다..!
+
+  const mapInfo = [
+    {
+      "name":"서울",
+      "lat" : "37.532600",
+      "lon" : "127.024612"
+    },
+    {
+      "name":"대전",
+      "lat" : "36.3730178",
+      "lon" : "127.2483736"
+    }
+  ] 
+ 일단 위경도 데이타를 만들고
+
+        const icons = svg.append('g').selectAll('svg')
+        .data(mapInfo)
+        .enter()  
+        .append("svg:image")
+        .attr("width", 50)
+        .attr("height", 50)
+        .attr('x' ,  d=> projection([d.lon, d.lat])[0])
+        .attr('y' ,  d=> projection([d.lon, d.lat])[1] - 100)
+        .attr('opacity', 0)
+        .attr("xlink:href", require("../icons/grapefruit.svg")) 
+        .on('click', d =>{
+          console.log(d)
+        })
+        .transition()
+        .ease(d3.easeElastic)
+        .duration(2000)
+        .delay((d, i)=> i * 50)
+        .attr('opacity', 1)
+        .attr('y' ,  d=> projection([d.lon, d.lat])[1])
+        
+ 이렇게 매핑을 하면 됩니다. 우리가 만들어 놓은 위경도 자료 만큼..! svg를 붙이는 겁니다..!
+
+미리 저장해 놓은 svg를 svg:image로 불러오고 아이콘의 위치인 x와 y를 projection 메서드를 통해 잡습니다.
+
+​
+
+projection
+
+아까 정의해 놓은 projection 메소드 즉, 투사법은 경도와 위도 자료를 넣어서 dx와 dy를 반환합니다. 
+
+  function projection(point) {
+    point = projectRotate(point[0] * __WEBPACK_IMPORTED_MODULE_5__math__["r" /* radians */], point[1] * __WEBPACK_IMPORTED_MODULE_5__math__["r" /* radians */]);
+    return [point[0] * k + dx, dy - point[1] * k];
+  }
+ D3 내부의 projection 메소드는 이렇게 생겼습니다. 위경도에 해당하는 값을 배열로 받아서 첫번째에 그 투사법으로 추출되는 x, 경도를 반환하고 y, 위도를 반환합니다.  
+
+​
+
+그리고 처음에는 투명도를 0으로 주고 transition 을 통해 마지막에는 1 그리고 delay를 줘서 차근차근 자몽이  떨어져 나오는 예제를 만든 것입니다. 
+
+ * 이 이벤트는 현재 제거 되었습니다 추후 강의에 툴팁과 transition이 포함된 강의를 올리도록 하겠습니다. 
+
+
+우와 자몽이 떨어지네요..?!
+
+4. 줌이벤트
+
+        const zoomed = () =>{
+          map.attr('transform', d3.event.transform)
+          icons.attr('transform', d3.event.transform)
+        }
+        const zoom = d3.zoom().scaleExtent([1, 8]).on('zoom', zoomed)
+        svg.call(zoom)
+ 줌은 이렇게 줌을 걸어주고자 하는 group에 transform 특성에 해당 event를 추가하고 zoom이 큰 svg에서 발동할 때마다 미리 설정해 놓은 이벤트들이 작동하게끔 설정해주면 됩니다.   
+ 
 #### 4.2.3 지도 매핑모듈과 zoom이벤트
 
 ### 4.3 D3.js : 증가하는 숫자
