--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -16,9 +16,9 @@ excerpt: MEVN교과서 (1)
 # 지은이의 말
 이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징까지 알아보게 될 것입니다.
 
-인터넷에 간단히 검색해서 찾을 수 있는 내용들은 최대한 배제해고 최대한 경험과 노하우, 그리고 아름다운 코드 중심의 설명이 가득한 책이 되고자 노력했습니다. 많은 도움이 되었으면 합니다.
+인터넷에 간단히 검색해서 찾을 수 있는 내용들은 최대한 배제해고 최대한 경험과 노하우를 넣고 그냥 인터넷을 보고 이해하기에는 어려운 지식들을 쉽게 설명했으며 그리고 아름다운 코드 중심의 설명이 가득한 책이 되고자 노력했습니다. 많은 도움이 되었으면 합니다.
 
-아울러 모든 코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내셔서 해답을 찾길 바랍니다. 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 충고들 부탁드립니다. 
+아울러 이 책에 나오는 모든 예제코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내주시면 빠르게 답을 드리겠습니다. 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 충고와 조언들 부탁드립니다. 
 
 # 독자대상
 이 책을 보려면 다음 기술에 대한 기본 지식이 있어야 합니다. 
@@ -42,12 +42,14 @@ excerpt: MEVN교과서 (1)
 - Pm2 라이브러리 설정 
 
 ### 2.2. Express
- - HTTP 요청에 응답하는 **미들웨어** 설정가능
+ - HTTP 요청에 응답하는 미들웨어 설정가능
  - HTTP 메소드, URL 기반으로 하는 라우팅설정  
  - 쉬운 서버구동 
 
 ### 2.3. Vue.js
 - SPA와 Vue.js 
+- SPA의 장점
+- SPA와 단점 
 - Vue-cli 설정
 - Webpack 구조
 
