--- a/_posts/2019-06-30-MEVN교과서-(4).md
+++ b/_posts/2019-06-30-MEVN교과서-(4).md
@@ -13,10 +13,10 @@ excerpt: MEVN교과서 (4)
 ![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/MEVN_3장.jpg)
 
 ## 3. 코드최적화와 패러다임
-코드를 짤 때 그저 로직만을 짜면 절대 안됩니다. 그것은 죄악입니다. 코드를 짤 때 우리는 확장성, 유연성, 성능 등을 모두 고려해야 합니다. 이렇게 조금씩 그리고 세심하게 짠 코드가 나중에 봤을 때 무한한 행복을 가져올 것입니다. 
+코드를 짤 때 그저 주어진 로직만을 짜면 안됩니다. 항상 코드를 짤 떄는 그 코드의 확장성, 유연성, 성능 등을 모두 고려해야 합니다.  
 
 ### 3.1 함수형프로그래밍
-그렇다면 어떻게 짜야 할까요? 한 프로젝트당 코드 패러다임을 정해놓고 짜는 것이 중요합니다.패러다임이란 어떻게 짤 것인지를 규정한 것을 말합니다. 예를 들어서 객체지향형으로 짜자, MVC패턴으로 짜자, 함수형프로그래밍으로 짜자 등을 일컫습니다. 자세히 들어가면 `margin: 0 px`는 `margin : 0` 으로 놓자 등 아주 세세한 코드 스타일까지 정하는 것을 일컫습니다. 
+그렇다면 어떻게 짜야 할까요? 한 프로젝트당 코드 패러다임을 정해놓고 짜는 것이 중요합니다.패러다임이란 어떻게 짤 것인지를 규정한 것을 말합니다. 예를 들어서 객체지향형으로, MVC패턴으로 ,함수형프로그래밍으로 짜자 등을 일컫습니다. 예를 들어 CSS의 경우 `margin: 0 px`는 `margin : 0` 으로 놓자 등이 해당합니다.  
 
 저는 코드를 짤 때 함수형프로그래밍으로 짜는 것을 추천하며 이 책에서는 함수형프로그래밍으로 모든 소스코드를 짜도록 하겠습니다.
 
@@ -25,7 +25,7 @@ excerpt: MEVN교과서 (4)
 
 좀 더 자세히 말하자면 함수들을 작게 쪼개서 블록을 쌓듯이 로직을 구현하고 다형성을 높이고 고차함수를 활용하여 재사용성을 높이고 참조투명성을 통해 부수효과가 줄어들어 유지보수성을 증대시키는 함수형 프로그래밍에 대해서 알아보겠습니다. 함수형프로그래밍을 하면 단순하고 간결한 흐름 중심의 모델이 되고 서술부와 평가부가 분리되어 지연평가가 가능합니다.   
  
- > 다형성, 어떠한 인자든 가능한 것을 말한다. 
+ > 다형성, 어떠한 인자든 가능한 것 
  
  > 참조투명성: 함수의 출력은 오로지 그 함수에 입력된 값에만 의존성을 가진다는 의미
  
@@ -35,8 +35,7 @@ excerpt: MEVN교과서 (4)
 함수형 프로그래밍에는 여러가지 특징들이 있습니다. 그 특징들을 살펴보겠습니다.  
 
 #### 1. 순수함수와 참조 투명성 
-순수함수란 동일한 입력을 받아서 동일한 출력을 하는 것을 말합니다. 참조투명성의 성질을 가지고 있죠.  
-위의 `PURE`는 순수함수고 아래 `not_PURE`는 순수함수가 아닙니다. 
+순수함수란 동일한 입력을 받아서 동일한 출력을 하는 것을 말합니다. 참조투명성의 성질을 가지고 있습니다.   
 ```js
 const PURE = (a, b)=>{
     return a + b; 
@@ -45,11 +44,11 @@ const not_PURE = (a)=>{
     return a += 10;  
 }
 ```
+위의 `PURE`는 순수함수고 아래 `not_PURE`는 순수함수가 아닙니다. 
 외부의 인자를 변화시키지 않고 값이 일정해야 합니다. 10을 더하는 함수지만 외부의 a의 값을 증가시켜서 부수효과가 생기게 했습니다. 
-이는 순수함수가 아닙니다.  
+이는 순수함수가 아닙니다. 예를 들어 Math.max는 순수함수입니다. 무조건 들어온 인자들을 토대로 최대값을 반환하기 때문입니다. 외부의 값들은 상관하지 않고 그저 들어오는 인자값만을 이용해서 결과를 도출해내는 것이 순수함수입니다. 
 
-즉, 외부의 인자를 변화시키지 않고 최대한 지역변수만을 써서 구현해야 합니다. 그리고 인수로 넘기는 값의 본체조차 수정되면 안됩니다. 
-함수인수로 넘길 때 객체에 변이를 일으키지 않도록 주의를 하며 `deep copy`를 한 후 변이를 하던가 등의 방법을 써야 합니다. 또한 외부변수에 종속되지 않고, 동일한 입력을 받았을 때 동일한 결과를 내는 참조 투명한 함수를 써야 합니다. 
+하지만 프로젝트를 하다 보면 전역변수를 쓸 때가 있습니다. 그러나 함수형프로그래밍을 한다면 1) 최대한 지역변수만을 써서 구현해야 합니다. 그리고 2) 인수로 넘기는 값의 본체조차 수정되면 안됩니다. 3) 인자로 넘기는 값이 객체라면 원본객체에 변이를 일으키지 않도록 주의해야 합니다. `deep copy`를 한 후 변이를 하던가 등의 방법을 써야 합니다.  
 ```js
 var c = 0;
 //받은 인자자체가 변함
@@ -78,16 +77,14 @@ const b = [1, 2, 3].map(a)
 console.log(b)
 ```
 
-**일급객체**란 함수를 변수에 담을 수 있고 함수나 메서드의 인자로 넘길 수 있으며 함수나 메서드에서 리턴을 할 수 있는 것을 말합니다. 
-그리고 자바스크립트의 함수는 일급함수입니다. 일급함수란 아무때나 선언이 가능하고 익명으로 선언이 가능하고 익명으로 선언한 함수도 함수나 메서드의 인자로 넘길 수 있어서 아래처럼 함수를 자유자재로 놓을 수 있습니다. 
-
 #### 2.2 함수를 실행하여 리턴하는 `_call` 
 ```js
 const _call = (a, b) => a() + b() 
 ```
+**일급객체**란 함수를 변수에 담을 수 있고 함수나 메서드의 인자로 넘길 수 있으며 함수나 메서드에서 리턴을 할 수 있는 것을 말합니다. 
+그리고 자바스크립트의 함수는 일급함수입니다. 일급함수란 아무때나 선언이 가능하고 익명으로 선언이 가능하고 익명으로 선언한 함수도 함수나 메서드의 인자로 넘길 수 있어서 위의 _call 함수처럼 인자를 받아 함수의 실행시점을 자유자재로 놓을 수 있습니다. 
 
-#### 2.3 함수를 리턴하는 함수 
-이렇게 함수를 안에서 다시 리턴해서 실행시점을 지연시킬 수 있습니다.  
+#### 2.3 함수를 리턴하는 함수  
 ```js
 //ES6
 const a = val => () => val; 
@@ -102,7 +99,7 @@ var a_lazy = a(12010);
 a_lazy();
 // 12010 
 ```
-
+위의 코드는 a라는 함수가 함수를 리턴하고 다시 a_lazy에다가 함수를 할당하는 코드입니다. 이렇게 함수를 안에서 다시 리턴해서 실행시점을 지연시킬 수 있습니다.  
 
 #### 3. 커링
 여러개의 파라미터 보다 적은 수의 파라미터를 받아 누락된 파라미터를 인자로 받습니다.  
@@ -114,20 +111,16 @@ a_lazy();
 메모이제이션을 할 때도 효과적이며 `Point-free`로 로직을 구현하는데도 효과적입니다.
 
 
-#### 3.1 ramda를 이용한 예
-FP를 도와주는 Ramda를 이용한 예입니다. 마지막 파라미터를 skip하고 sum을 만들 수 있으며 add의 경우 나중에 2를 추가할 때 함수를 평가하게 하여 3이 되게 합니다. 
+#### 3.1 ramda를 이용한 예 
 ```js
-const R = require('ramda')
-const add = (a, b)=> (a + b); 
-const total = R.reduce(add, 0)
-const sum = total([1, 2, 3, 4, 5]) 
-console.log(sum)
-R.add(1)(2)
+const R = require('ramda')  
+const a = R.add(1)
+const b = a(2)
+console.log(b) //3 
 ``` 
+함수형 프로그래밍을 도와주는 Ramda.js 라이브러리를 이용한 예입니다. R.add의 경우 처음에 인자 1을 넣고 나중에 2를 넣어 인자가 완성이 되었을 때 **실행**을 할 수 있게 합니다.  
 
-#### 3.2 ramda를 이용한 예
-아래처럼 순차적으로 인자를 넘겨줘도 커링이 됩니다. 
-즉 인자를 완전히 채우지 않아 실행시점을 미루다가 인자를 완전히 채웠을 때 실행이 되는 것이 바로 커링입니다.
+#### 3.2 ramda를 이용한 예 
 ```js
 const addFourNumbers = (a, b, c, d) => a + b + c + d;
 
@@ -136,8 +129,9 @@ const f = curriedAddFourNumbers(1, 2);
 const g = f(3);
 g(4); //=> 10 
 ```
+위 코드처럼 어떠한 함수를 만들고 R.curry에 담는다면 그 함수를 토대로 만들어지는 커링함수가 완성됩니다.  
 
-그렇다면 커링을 한번 만들어보겠습니다. 
+#### 3.3 커스텀커링
 ```js
 const k_curry = fn => a => b => fn(a, b); 
 const f = k_curry((a, b) => a + b); 
@@ -145,6 +139,7 @@ const f_c = f(1)
 const ret = f_c(2);
 console.log(ret)
 ```
+그렇다면 커링을 한번 만들어보겠습니다. 
 `k_curry`, 2개의 인자를 받을 수 있는 커리를 만들었고 그 커리로 `f`를 래핑, 감싸줍니다. 이제 f는 커링이 가능한 **더하기함수**가 됩니다. 
 저런식으로 평가시점을 늦출 수 있습니다. ES6버전은 위와 같고 ES5버전은 다음과 같습니다. 
 
@@ -171,12 +166,16 @@ pipe(
   a => a + 1, 
   a => filter(a => a % 2, a) 
 )
-//커링 적용 후 - filter에 적용을 하였다. 첫번째 함수의 결과값이 filter라는 함수로 전달되었다. 
+```
+커링을 적용하기 전에는 `filter(a => a % 2, a)` 처럼 인자를 넣어 주어야 합니다. 
+
+```js  
 pipe(
   a => a + 1, 
   filter(a => a % 2) 
 ) 
 ```
+하지만 커링이 적용 후에는 인자를 넣을 필요가 없습니다. 
 
 참고로 `fx.js`의 커리는 이런식으로 구현되어있습니다. 
 `..._`로 **남은**인자를 받아서 만약에 남은 인자가 없다면 함수를 실행합니다. 
